Ya sirven los servicios

--- a/public/adminMenu.html
+++ b/public/adminMenu.html
@@ -52,6 +52,13 @@
 				</ul>
 				<div class="tab-content" id="myTabContent">
 					<div class="tab-pane fade show active" id="menu" role="tabpanel" aria-labelledby="menu-tab">
+						<div class="row">
+							<select class="form-control" id="currencySelect">
+								<option value="MXN">MXN</option>
+								<option value="EUR">EUR</option>
+								<option value="USD">USD</option>
+							</select>
+						</div>
 						<!-- Lista menu -->
 						<div id="gridMenu" class="col">
 							<div id="gridMenuContent" class="row">
